--- a/estilo.css
+++ b/estilo.css
@@ -75,3 +75,49 @@ body {
 .coluna-esquerda a iconify-icon {
     margin-right: 10px;
 }
+
+/* pagina leticia.html */
+.coluna {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(56, 56, 56);
+}
+
+.menu {
+    color: white;
+    width: 20%;
+    padding-right: 20px;
+    padding-left: 20px;
+    background-color: var(--cor-coluna-esquerda);
+    border-right: 1px solid var(--cor-logo);
+}
+
+.conteudo h1 {
+    margin-bottom: 25px;
+}
+
+.conteudo {
+    flex-grow: 4;
+    background-color: var(--cor-coluna-direita);
+}
+
+.menu a {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: var(--cor-logo);
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 15px;
+    transition: background-color 0.3s;
+}
+
+.menu a:hover {   
+    background-color: var(--cor-coluna-esquerda);
+    color:black;    
+    font-weight: 600;
+}
